--- a/src/styles/TextInput.css
+++ b/src/styles/TextInput.css
@@ -40,6 +40,10 @@
   color: white;
 }
 
+.TextInput-Light {
+  border: 3px solid black;
+}
+
 .TextBox:focus {
   outline: none;
 }
@@ -55,4 +59,27 @@
 
 .TextBoxLarge:focus {
   outline: none;
+}
+
+.Text-Light {
+  color: black;
+}
+
+.Text-Light::placeholder {
+  color: black;
+  opacity: 1;
+}
+
+@media screen and (max-width: 360px) {
+  .TextInput {
+    width: 150px;
+  }
+
+  .TextBox {
+    width: 125px;
+  }
+
+  .TextBoxLarge {
+    width: 120px;
+  }
 }
