--- a/src/styles/Postview.css
+++ b/src/styles/Postview.css
@@ -12,6 +12,11 @@
   display: flex;
   flex-direction: column;
   background: white;
+  word-wrap: break-word;
+}
+
+.Postview {
+  word-break: break-word;
 }
 
 .emptyH2 {
